<resources>
    <string name="app_name">GetTaxi Drivers</string>
    <string name="welcome">Welcome on\nGetTaxi App\nfor Drivers</string>
    <string name="signIn">Sign-In</string>
    <string name="signUp">Sign-Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cancel">CANCEL</string>

    <!--SignUp-->

    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="signUp_ID">ID</string>
    <string name="signUp_phoneNumber">Phone Number</string>
    <string name="signUp_creditCard">Credit Card</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
