<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signUp_firstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"

            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signUp_lastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/lastName"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"

            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary" />
    </LinearLayout>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signUp_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signUp_ID"
            android:inputType="numberSigned"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"

            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signUp_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signUp_phoneNumber"
            android:inputType="phone"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"

            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signUp_creditCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signUp_creditCard"
            android:inputType="numberSigned"
            android:maxLength="16"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"

            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signUp_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_marginTop="15dp"

            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signUp_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"

            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/signUp_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm your Password"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"

            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary" />



        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:orientation="horizontal">-->

            <!--<com.rengwuxian.materialedittext.MaterialEditText-->
                <!--android:id="@+id/departure"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:hint="@string/depart"-->
                <!--android:inputType="time"-->
                <!--android:text=""-->
                <!--android:textColor="@color/colorPrimary"-->
                <!--android:textSize="20sp"-->
                <!--android:maxLength="5"-->

                <!--app:met_baseColor="@color/colorPrimary"-->
                <!--app:met_floatingLabel="highlight"-->
                <!--app:met_primaryColor="@color/colorPrimary" />-->


        <!--</LinearLayout>-->

    </LinearLayout>

</android.support.v7.widget.CardView>